fix(navbar): change logo and menu collapse

--- a/single_pages/static/single_pages/css/landing.css
+++ b/single_pages/static/single_pages/css/landing.css
@@ -1,5 +1,6 @@
 body {
-    background: url('/static/single_pages/images/logo.png') no-repeat center center fixed;
+    /*background: url('/static/single_pages/images/logo.png') no-repeat center center fixed;*/
+    background-color: #64a8ff;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
